--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div id="main-content">
         <h2>Dados Pessoais</h2>
-        <img id="profile-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQB7JKLlzmRh3dseJN_OZu1ijH3wcLfxF_KpqeLO-ASA&s" alt="Foto de Perfil" height="250px">
+        <img id="profile-image" src="foto-one-piece.jpg" alt="Foto de Perfil" height="250px">
         <b><p>Nome:</b> Hamilton Salome Vieira</p>
      <b><p>E-mail:</b> hamiltonsalome99@gmail.com.</p>
         <b><p>Telefone:</b> (48)984748-7246</p>
