--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
 
         #header {
-            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjFYFV6iURFfCiEJ6l40rD3oqI3ea90jQOiQ&usqp=CAU);
+            background-image: src="plano de fundo.jpg";
             background-size:cover;
             background-position: center;
             color: #fff;
