--- a/index.html
+++ b/index.html
@@ -11,28 +11,21 @@
         }
 
         #header {
-            background-image: src="plano de fundo.jpg";
-            background-size:cover;
-            background-position: center;
+            background-color: #333;
             color: #fff;
             text-align: center;
             padding: 20px;
-        
         }
 
         #profile-image {
-            max-width: 400px;
+            max-width: 200px;
             border-radius: 50%;
             display: block;
-            margin: 0;
+            margin: 0 auto;
         }
 
         #main-content {
-            padding: 25px;
-        }
-        h2{
-            background-color: rgb(109, 16, 104);
-            color: #f0f0f0;
+            padding: 20px;
         }
     </style>
 </head>
