--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <b><p>Curso:</b> Análise e Desenvolvimento de Sistemas.</p>
         <b><p>Instituição:</b> Faculdade Municipal de Palhoça.</p>
         <b><p>Ano de Conclusão:</b> 2025.</p>
+     <a href="2pagina.html">Ir para a Página 2</a>
     </div>
     <P></P>
 </body>
