--- a/2pagina.html
+++ b/2pagina.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>Página 2</h1>
+    <img src="plano de fundo.jpg">
     <p>Esta é a segunda página.</p>
     <a href="index.html">Voltar para a Página 1</a>
 </body>
